[package]
name = "oc_spray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[target.'cfg(windows)'.dependencies]
soloud = { version = "1", default-features = false, features = ["winmm"] }

[target.'cfg(target_os = "linux")'.dependencies]
soloud = { version = "1", default-features = false, features = ["alsa"] }

[target.'cfg(target_os = "macos")'.dependencies]
soloud = { version = "1", default-features = false, features = ["coreaudio"] }

